# LIVI

./: LICENSE  Makefile  README.md  pyproject.toml
src/: main.py
src/livi/: cli.py
src/livi/apps/audio_encoder/: cli.py
src/livi/apps/audio_encoder/config/: infer.yaml
src/livi/apps/audio_encoder/data/: dataset.py
src/livi/apps/audio_encoder/infer/: session.py
src/livi/apps/frozen_encoder/: cli.py
src/livi/apps/frozen_encoder/config/: infer.yaml
src/livi/apps/frozen_encoder/infer/: session.py
src/livi/apps/frozen_encoder/models/: text_encoder.py  transcriber.py
src/livi/apps/retrieval_eval/: cli.py  ranker.py
src/livi/core/data/preprocessing/: vocal_detector.py  whisper_feature_extractor.py
src/livi/core/data/utils/: audio_toolbox.py  io_toolbox.py
